--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
   padding: 30px;
   margin: 0px auto;
   gap: 25px;
+  width: 100%;
 }
 textarea {
   flex: 1;
@@ -19,6 +20,7 @@ textarea {
   padding: 10px;
   font-size: 20px;
   outline: none;
+  
 }
 .htmlPanel {
   flex: 1;
@@ -28,4 +30,9 @@ textarea {
   padding: 20px;
   background-color: lightgray;
   overflow: hidden;
+}
+.error{
+  color:red;
+  text-align: center;
+  margin-top: 20px;
 }
